feat: skin flat view(two dimension view) added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SkinViewAndroid">
         <activity
-            android:name=".MainActivity"
+            android:name=".FlatSkinViewTestActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,6 +19,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
